JSW Devsb/src/objects/Gifts_Dispatch__c.object
<CustomObject>
    <fields>
        <fullName>Dispatch_Date__c</fullName>
        <label>Dispatch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dispatch_Type__c</fullName>
        <label>Dispatch Type</label>
        <picklist>
            <picklistValues>
                <fullName>HO to State HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State HQ to Distrcit HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distrcit HQ to Dealer</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gift_Stock__c</fullName>
        <label>Gift Stock</label>
        <referenceTo>Gift_Stock__c</referenceTo>
        <relationshipLabel>Gifts Dispatch</relationshipLabel>
        <relationshipName>Gifts_Dispatch</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gift_Text__c</fullName>
        <formula>Gift_Stock__r.Gift__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gift</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gift</label>
        <referenceTo>Gift__c</referenceTo>
        <relationshipLabel>Gifts Dispatch</relationshipLabel>
        <relationshipName>Gifts_Dispatch</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pictures__c</fullName>
        <label>Pictures</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Dispatch__c</fullName>
        <label>Purpose of Dispatch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity Dispatched</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>Gifts Dispatch</relationshipLabel>
        <relationshipName>Gifts_Dispatch</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tracking_No__c</fullName>
        <label>Tracking No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Receipt_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Receipt Number</label>
        <referenceTo>Vendor_Gift_Management__c</referenceTo>
        <relationshipLabel>Gifts Dispatch</relationshipLabel>
        <relationshipName>Gifts_Dispatch</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Gifts Dispatch</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Gift__c</columns>
        <columns>Gift_Stock__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GD-{0000}</displayFormat>
        <label>Gift Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gifts Dispatch</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>